dropdown fixed and full width on small devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -177,8 +177,11 @@ h6 {
 
 
 @media only screen and (max-width: 767px) {
-	.navbar-nav .dropdown-menu {
-		position: absolute;
+	#navDropdown {
+		line-height: 2;
+		position: fixed;
+		top: 60px;
+		width: 100%;
 	}
 
 	.nav-title {
